class Colisionable
{
private:
    /* data */
public:
    Colisionable(/* args */);
    ~Colisionable();
};

Colisionable::Colisionable(/* args */)
{
}

Colisionable::~Colisionable()
{
}
