class Obstaculo
{
private:
    /* data */
public:
    Obstaculo(/* args */);
    ~Obstaculo();
};

Obstaculo::Obstaculo(/* args */)
{
}

Obstaculo::~Obstaculo()
{
}

