class Partida
{
private:
    /* data */
public:
    Partida(/* args */);
    ~Partida();
};

Partida::Partida(/* args */)
{
}

Partida::~Partida()
{
}

