class Charco
{
private:
    /* data */
public:
    Charco(/* args */);
    ~Charco();
};

Charco::Charco(/* args */)
{
}

Charco::~Charco()
{
}
