#pragma once
#include <SFML/Graphics.hpp>
#include <SFML/Window.hpp>
#include <SFML/System.hpp>
#include <SFML/Audio.hpp>
#include <iostream>
#include <math.h>
#include <vector>
#include <variant>

class Juego
{
private:
   void initVariables()
   {

   } 

    void initWindow()
    {
        
    }

public:
    Juego(/* args */);
    ~Juego();
};

Juego::Juego(/* args */)
{
}

Juego::~Juego()
{
}
