@startuml SpaceCar

class Obstaculo {
    +~Obstaculo()
    +playCrashSound()
    +takeHit()
    +getHitCount() const : int
    +getSprite() : sf::Sprite&
}

class Caja
class Charco

class Juego {
    -window : sf::RenderWindow*
    -jugador : Jugador*
    -obstaculos : std::vector<Obstaculo>
    -puntaje : Puntaje*
    +Juego()
    +~Juego()
    +update()
    +render()
    +run()
}

class Jugador {
    +Jugador(float posX, float posY)
    +update(sf::RenderWindow* window)

}

class Carro {
    -carro : sf::Sprite
    -texture : sf::Texture
    -speed : double
    +Carro(bool isPlayer, float posX, float posY)
    +update(sf::RenderWindow* window)
    
}

class Puntaje {
    -puntaje : int
    +Puntaje()
    +~Puntaje()
    +aggPuntuacion(int puntos)
    +updateText()
    +draw(sf::RenderWindow &window)
    +getPuntaje() const : int
    +resetPuntaje()
}

class Vida {
    +Restablecer()
}

class Partida {
    +tiempo : float
    +Iniciar()
    +Perder()
}

class Velocidad {
    +Alta()
    +Baja()
}

class Colisionable {
    +DetectarColision()
}

Juego "1" *-- "1" Jugador
Juego "1" *-- "1" Partida 
Juego "1" *-- "1" Puntaje
Juego "1" *-- "*" Obstaculo

Jugador "1" o-- "1" Carro
Jugador "1" *-- "1" Vida
Jugador "1" *-- "1" Puntaje

Partida "1" *-- "*" Obstaculo

Charco --|> Obstaculo
Caja --|> Obstaculo

Obstaculo --|> Colisionable
Carro --|> Colisionable

@enduml